--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.11",
     "@ckeditor/ckeditor5-angular": "^9.1.0",
+    "@fullcalendar/angular": "^6.1.15",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@ngrx/store": "^18.1.1",
+    "@ngrx/store-devtools": "^18.1.1",
     "animate.css": "^4.1.1",
     "ckeditor5": "^44.0.0",
     "ckeditor5-premium-features": "^44.0.0",
@@ -42,6 +48,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.11",
+    "@angular-devkit/core": "^19.0.2",
     "@angular/cli": "^18.2.11",
     "@angular/compiler-cli": "^18.2.0",
     "@types/express": "^4.17.17",
