--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.12",
+    "quill": "^2.0.3",
     "remove": "^0.1.5",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.5",
