--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "@ngrx/effects": "^18.1.1",
+    "@ngrx/entity": "^18.1.1",
     "@ngrx/store": "^18.1.1",
     "@ngrx/store-devtools": "^18.1.1",
     "@sweetalert2/ngx-sweetalert2": "^12.4.0",
